# network-security-mlops

./: data_ingestion_test.py  data_transformation_test.py  data_validation_testing.py  db.py  pyproject.toml  requirements.txt  setup.py
app/components/: data_ingestion.py  data_transformation.py  data_validation.py
app/constants/training_pipeline/: __init__.py
app/entity/: config_entity.py
app/exception/: exception.py
app/logging/: logger.py
app/utils/main_utils/: utils.py
app/utils/ml_utils/metric/: classification_metric.py
app/utils/ml_utils/model/: estimator.py
artifacts/02_18_2026_20_52_44/data_ingestion/ingested/: test.csv  train.csv
artifacts/02_18_2026_21_58_44/data_ingestion/ingested/: test.csv  train.csv
artifacts/02_18_2026_21_58_44/data_validation/drift_report/: report.yaml
artifacts/02_26_2026_03_57_17/data_ingestion/feature_store/: phisingData.csv
artifacts/02_26_2026_03_57_17/data_ingestion/ingested/: test.csv
artifacts/02_26_2026_03_57_17/data_validation/drift_report/: report.yaml
artifacts/02_26_2026_03_57_17/data_validation/validated/: train.csv
artifacts/02_26_2026_04_00_00/data_ingestion/ingested/: test.csv
artifacts/02_26_2026_04_00_00/data_transformation/transformed/: test.npy  train.npy
artifacts/02_26_2026_04_00_00/data_transformation/transformed_object/: preprocessing.pkl
artifacts/02_26_2026_04_00_00/data_validation/drift_report/: report.yaml
artifacts/02_26_2026_04_00_00/data_validation/validated/: train.csv
